--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,68 @@
 body {
 	margin: 0;
 }
+
+.yellow_big_circle {
+	position: relative;
+	width: 300px;
+	height: 300px;
+	border-radius: 300px;
+	background: yellow;
+}
+
+.red_inside_circle {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	margin: auto;
+	width: 200px;
+	height: 200px;
+	border-radius: 200px;
+	background: red;
+}
+
+.blue_inside_block {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	margin: auto;
+	width: 100px;
+	height: 100px;
+	border-radius: 100px;
+	background: blue;
+}
+
+.blue_big_circle {
+	position: relative;
+	top: 160px;
+	right: -170px;
+	width: 300px;
+	height: 300px;
+	background: blue;
+	border-radius: 300px;
+}
+
+.yellow_inside_circle {
+	position: absolute;
+	top: 50px;
+
+	left: -60px;
+	width: 200px;
+	height: 200px;
+	border-radius: 200px;
+	background: yellow;
+}
+
+.red_inside {
+	position: absolute;
+	top: 50px;
+	left: 130px;
+	width: 100px;
+	height: 100px;
+	border-radius: 100px;
+	background: red;
+}
